log
Thu May  5 00:55:45 UTC 2022: 
 heap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
9ac5c7d
Thu May  5 00:56:15 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
cebbc70
Thu May  5 00:57:02 UTC 2022: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
1d26746
Thu May  5 00:58:22 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
74521ab
Thu May  5 01:00:26 UTC 2022: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:23:19: error: invalid type argument of ‘->’ (have ‘heapElem {aka struct nodo}’)
     return dato[0]->data;
                   ^~
heap.c:24:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
8cffc3d
Thu May  5 01:00:37 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
32ffc1d
Thu May  5 01:01:45 UTC 2022: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|3
total_score: 10/70
9d8dda7
